--- a/software/web/quadruped/package.json
+++ b/software/web/quadruped/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
-    "build": "gulp"
+    "build": "gulp",
+    "preinstall": "npx npm-force-resolutions"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +15,13 @@
     "gulp": "^3.9.1",
     "gulp-base64-favicon": "^1.0.2",
     "gulp-clean-css": "^3.4.2",
-    "gulp-css-base64": "^1.3.4",
+    "gulp-css-base64": "^2.0.0",
     "gulp-gzip": "^1.4.0",
-    "gulp-htmlmin": "^2.0.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-inline": "^0.1.1",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^3.0.2"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.10"
   }
 }
